# lua-nuspell

./: .clang-format  .clangd  CMakeLists.txt  README.md  config.ld  lua-nuspell-scm-1.rockspec  runtest.sh
.github/workflows/: format.yaml  test.yaml
doc/: index.html
doc/examples/: test.lua.html
doc/manual/: README.md.html
spec/: test.lua  util.lua
src/: nuspell.cxx
